--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,5 +1,1 @@
-p {
-  color: red;
-  width: 500px;
-  border: 1px solid black;
-}
+body{margin:0;max-width:100%;max-width:100%;background-color:#27f591}.contentContainer{max-width:100vw;max-height:100vh}.loginForm,.welcomeWrapper{align-items:center;text-align:center;display:flex;min-height:50vh;max-width:100%}p{color:red}/*# sourceMappingURL=main.css.map */
