--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -16,11 +16,28 @@ body {
 }
 
 .loginForm, .welcomeWrapper{
-  align-items: center;
+  flex-direction: column;
   text-align: center;
   display: flex;
-  min-height: 50vh;  
+  min-height: 25vh;  
   max-width: 100%;
+  font-size: 54px;
+  margin: 0;
+}
+#inputName {
+  font-size: 64px;
+  text-align: center;
+}
+
+#loginBtn {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 64px;
+  margin: 20px;
 }
 
 p {
