--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -16,27 +16,41 @@ body {
 }
 
 .loginForm, .welcomeWrapper{
+  display: flex;
   flex-direction: column;
   text-align: center;
-  display: flex;
-  min-height: 25vh;  
-  max-width: 100%;
-  font-size: 54px;
+  align-items: center;
+  height: 50%;  
+  max-width: 100vw;
+  font-size: 32px;
   margin: 0;
 }
+
+.loginForm {
+  height: 30%;
+  border-style: solid;
+  border-width: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0px;
+  left:0
+}
+
 #inputName {
-  font-size: 64px;
+  font-size:32px;
   text-align: center;
 }
 
 #loginBtn {
+  background: $main-color2;
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 64px;
+  font-size:16px;
   margin: 20px;
 }
 
