--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -71,11 +71,11 @@ p {
   .gameRulesTitle {
     font-size: 2rem;
     text-align: center;
-    margin: 0;
-  }
+    margin-bottom: 4px;
+    }
 
   .gameRulesText {
-    width: 75%;
+    width: 60%;
     margin: 0 auto;
     text-align: center;
     color: black;
