Co-authored-by: Tittie Thomasson <tittieth@users.noreply.github.com>

--- a/main.scss
+++ b/main.scss
@@ -94,3 +94,12 @@ p {
     padding: 5px;
   }
 }
+.desktop-three-div {
+  display: flex;
+}
+.play-div {
+  width: 60%;
+}
+.div-chat {
+  width: 40%;
+}
