--- a/style/_chat.scss
+++ b/style/_chat.scss
@@ -7,20 +7,23 @@ $main-color4: #F38181;
 
 .chat-container {
 	max-width: 1100px;
-	background: #fff;
-	margin: 30px auto;
+	padding: 20px;
+	background: $main-color2;
+	margin: 30px;
 	overflow: hidden;
+	border: 1px solid #000;
+	border-radius: 10px;
 }
 
 .chat-header {
-	background: $main-color3;
+	background: $main-color1;
 	color: #000;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	padding: 15px;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
 }
 
 .chat-main {
@@ -30,117 +33,72 @@ $main-color4: #F38181;
 
 .chat-sidebar {
 	background: $main-color4;
-	color: #fff;
-	padding: 20px 20px 60px;
-	overflow-y: scroll;
-}
+	text-align: left;
+	color: #000;
+	padding: 20px 30px 60px;
 
-.chat-sidebar h2 {
-	font-size: 20px;
-	background: rgba(0, 0, 0, 0.1);
-	padding: 10px;
-	margin-bottom: 20px;
-}
+	ul {
+		list-style: none;
+	}
 
-.chat-sidebar h3 {
-	margin-bottom: 15px;
-}
+	li {
+		margin-left: -30px;
+		padding: 10px 0;
+	
+	}
 
-.chat-sidebar ul li {
-	padding: 10px 0;
+	h3 {
+		margin-bottom: 15px;
+		text-decoration: underline;
+	}
 }
 
 .chat-messages {
 	padding: 30px;
 	max-height: 500px;
 	overflow-y: scroll;
-}
 
-.chat-messages .message {
-	padding: 10px;
-	margin-bottom: 15px;
-	background-color: var(--light-color);
-	border-radius: 5px;
-}
+	.message {
+		padding: 10px;
+		margin-bottom: 15px;
+		background-color: #fff;
+		border-radius: 5px;
+	}
 
-.chat-messages .message .meta {
-	font-size: 15px;
-	font-weight: bold;
-	color: var(--dark-color-b);
-	opacity: 0.7;
-	margin-bottom: 7px;
-}
+	.message .meta {
+		font-size: 15px;
+		font-weight: bold;
+		color: #000;
+		opacity: 0.7;
+		margin-bottom: 7px;
+	}
 
-.chat-messages .message .meta span {
-	color: #777;
+	.message .meta span {
+		color: #777;
+	}
 }
 
 .chat-form-container {
 	padding: 20px 30px;
-	background-color: var(--dark-color-a);
-}
+	background-color: $main-color3;
 
-.chat-form-container form {
-	display: flex;
-}
+	form {
+		display: flex;
+	}
 
-.chat-form-container input[type='text'] {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
-	flex: 1;
-}
+	input[type='text'] {
+		font-size: 16px;
+		padding: 5px;
+		height: 40px;
+		flex: 1;
+		border-radius: 5px;
+	}
 
-/* Join Page */
-.join-container {
-	max-width: 500px;
-	margin: 80px auto;
-	color: #fff;
-}
-
-.join-header {
-	text-align: center;
-	padding: 20px;
-	background: var(--dark-color-a);
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-}
-
-.join-main {
-	padding: 30px 40px;
-	background: var(--dark-color-b);
-}
-
-.join-main p {
-	margin-bottom: 20px;
-}
-
-.join-main .form-control {
-	margin-bottom: 20px;
-}
-
-.join-main label {
-	display: block;
-	margin-bottom: 5px;
-}
-
-.join-main input[type='text'] {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
-	width: 100%;
-}
-
-.join-main select {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
-	width: 100%;
-}
-
-.join-main .btn {
-	margin-top: 20px;
-	width: 100%;
+	.btn {
+		border-radius: 5px;
+		background-color: $main-color2;
+	}
+	
 }
 
 @media (max-width: 700px) {
