--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,4 @@
-@import '_chat';
+@import '_chatt';
 
 $main-color1: #27f591;
 $main-color2: #1be7fa;
@@ -60,6 +60,21 @@ p {
   color: red;
 }
 
+.grid td {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ccc;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 13px;
+}
+.grid td.clicked {
+  background-color: yellow;
+  font-weight: bold;
+  color: red;
+}
+
 .desktop2 {
   display: flex;
   flex-direction: column;
@@ -95,5 +110,15 @@ p {
     margin-top: 20px;
     padding: 5px;
   }
+}
+
+.play-div {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+}
+
+.main-div {
+  display: flex;
 }
 
