--- a/style/main.scss
+++ b/style/main.scss
@@ -1,5 +1,9 @@
 @import '_chatt';
 @import '_grid';
+@import '_desktop1';
+@import '_desktop2';
+
+
 
 $main-color1: #27f591;
 $main-color2: #1be7fa;
@@ -7,46 +11,16 @@ $main-color3: #FCE38A;
 $main-color4: #F38181;
 
 body {
-  margin: 0;
+  margin: 3%;
   max-width: 100%;
   max-width: 100%;
-  background-color:grey;
-}
-
-.contentContainer {
-  max-width: 100vw;
-  max-height: 100vh;
-}
-
-.loginForm, .welcomeWrapper{
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
-  height: 50%;  
-  max-width: 100vw;
-  font-size: 32px;
-  margin: 0;
-}
-
-.loginForm {
-  height: 30%;
-  border-style: solid;
-  border-width: 2px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0px;
-  left:0
-}
-
-#inputName {
-  font-size:32px;
+  background-color:#DEFFF0;
+  color: #31858F;
   text-align: center;
 }
 
-#loginBtn {
-  background: $main-color2;
+button {
+  background-color: #31858F;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -55,11 +29,23 @@ body {
   display: inline-block;
   font-size:16px;
   margin: 20px;
+  border-radius: 20px;
 }
 
-p {
-  color: red;
+article {
+  line-height: 1.5rem;
 }
+
+h2 {
+  font-size: 2rem;
+}
+
+
+.contentContainer {
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
 
 .grid td {
   cursor: pointer;
@@ -74,43 +60,6 @@ p {
   background-color: yellow;
   font-weight: bold;
   color: red;
-}
-
-.desktop2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .countPlayersTitle {
-    font-size: 3rem;
-    text-align: center;
-  }
-
-  .gameRulesTitle {
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 4px;
-    }
-
-  .gameRulesText {
-    width: 60%;
-    margin: 0 auto;
-    text-align: center;
-    color: black;
-    font-size: 1.2rem;
-  }
-
-  #startGameBtn {
-    background: $main-color2;
-    border: none;
-    color: white;
-    text-align: center;
-    height: 55px;
-    width: 180px;
-    font-size: 1rem;
-    margin-top: 20px;
-    padding: 5px;
-  }
 }
 
 .play-div {
