--- a/style/_chatt.scss
+++ b/style/_chatt.scss
@@ -7,19 +7,19 @@ $main-color4: #F38181;
 
 .chat-container {
 	max-width: 1100px;
+	min-height: 100%;
 	padding: 5px;
 	background: #31858F;
-	margin: 30px;
+	margin-left: 20px;
 	overflow: hidden;
-	border: 1px solid #000;
-	border-radius: 10px;
+	border: none;
+	border-radius: 20px;
 }
 
 .chat-header {
 	background: #DEFFF0;
-	
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	border-radius: 20px;
+	padding: 20px;
 	margin: 15px;
 	display: flex;
 	align-items: center;
@@ -30,13 +30,14 @@ $main-color4: #F38181;
 	display: grid;
 	grid-template-columns: 1fr 3fr;
 	margin: 15px;
+	border-radius: 20px;
 }
 
 .chat-sidebar {
 	background: #DEFFF0;
 	text-align: left;
-	
-	margin: 15px;
+	border-radius: 20px;
+	padding: 10px;
 	
 
 	ul {
@@ -56,10 +57,9 @@ $main-color4: #F38181;
 }
 
 .chat-messages {
-	margin: 15px;
 	max-height: 500px;
 	overflow-y: scroll;
-
+	margin-left: 20px;
 	.message {
 		padding: 10px;
 		margin-bottom: 15px;
@@ -82,10 +82,14 @@ $main-color4: #F38181;
 
 .chat-form-container {
 	padding: 20px 30px;
-	background-color: $main-color3;
-
+	background-color: #DEFFF0;
+	border-radius: 20px;
+	margin: 15px;
+	
 	form {
 		display: flex;
+		padding-top: 50px;
+		padding-bottom: 5px;
 	}
 
 	input[type='text'] {
@@ -93,13 +97,9 @@ $main-color4: #F38181;
 		padding: 5px;
 		height: 40px;
 		flex: 1;
-		border-radius: 5px;
+		border-radius: 20px
 	}
-
-	.btn {
-		border-radius: 5px;
-		background-color: #31858F;
-	}
+	
 	
 }
 
