--- a/style/_desktop1.scss
+++ b/style/_desktop1.scss
@@ -17,12 +17,18 @@ left: 0;
 right: 0px;
 margin: 3%;
 padding: 2%;
+
+
 }
 
-#inputName {
-font-size: 1.5rem;
+#inputName[type='text'] {
+width: 35%; 
+font-size: 16px;
 text-align: center;
 border-radius: 20px;
 border: solid 2px #31858F;
 position: relative;
+padding: 5px;
+height: 40px;
+
 }
