--- a/style/_desktop2.scss
+++ b/style/_desktop2.scss
@@ -1,8 +1,8 @@
 .desktop2 {
     display: flex;
     flex-direction: column;
- 
+    margin-top: 50%;
     h2 {
-        font-size: 5rem;
+        font-size: 6rem;
     }
 }
