--- a/style/_chatt.scss
+++ b/style/_chatt.scss
@@ -10,7 +10,7 @@ $main-color4: #F38181;
 	
 	min-height: 100%;
 	padding: 5px;
-	background: #31858F;
+	background: #2E7C86;
 	margin-left: 20px;
 	overflow: hidden;
 	border: none;
