--- a/style/main.scss
+++ b/style/main.scss
@@ -16,12 +16,12 @@ body {
   max-width: 100%;
   max-height: 100%;
   background-color:#DEFFF0;
-  color: #31858F;
+  color: #2E7C86;
   text-align: center;
 }
 
 button {
-  background-color: #31858F;
+  background-color: #2E7C86;
   border: none;
   color: white;
   padding: 15px 32px;
