--- a/style/_desktop1.scss
+++ b/style/_desktop1.scss
@@ -26,7 +26,7 @@ width: 35%;
 font-size: 16px;
 text-align: center;
 border-radius: 20px;
-border: solid 2px #31858F;
+border: solid 2px #2E7C86;
 position: relative;
 padding: 5px;
 height: 40px;
