--- a/style/_chatt.scss
+++ b/style/_chatt.scss
@@ -25,6 +25,9 @@ $main-color4: #F38181;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	h1 {
+		font-size: 2rem;
+	}
 }
 
 .chat-main {
