--- a/style/main.scss
+++ b/style/main.scss
@@ -3,6 +3,7 @@
 @import '_desktop1';
 @import '_desktop2';
 @import '_desktop3';
+@import '_desktop4';
 
 
 
@@ -47,7 +48,7 @@ h2 {
   font-family: monospace;
 }
 
-h3, h4, h5, h6, p, article, button {
+h3, h4, h5, h6, p, article, button, div {
   font-family: monospace;
 }
 
