--- a/style/_desktop4.scss
+++ b/style/_desktop4.scss
@@ -1,6 +1,8 @@
 .grid-div {
-    margin-top: 20%;
-    margin-bottom: 80%;
+    margin-top: 100px;
     text-align: center;
     font-size: 1.5rem;
+}
+.footer-div {
+    margin-top: auto;
 }
